# analyzer

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: linter-check.yml
page_analyzer/: app.py
page_analyzer/templates/: index.html  main.html  show_url.html  urls.html
