[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["qmka <eidolonzx@google.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.8.16"
flask = "^2.2.2"
gunicorn = "^20.1.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
